--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.7",
     "glob": "^10.4.1",
     "highlight.js": "^11.11.1",
+    "i18next": "^25.2.1",
     "ink": "^5.2.0",
     "ink-big-text": "^2.0.0",
     "ink-gradient": "^3.0.0",
@@ -46,6 +47,7 @@
     "mime-types": "^2.1.4",
     "open": "^10.1.2",
     "react": "^18.3.1",
+    "react-i18next": "^15.5.3",
     "read-package-up": "^11.0.0",
     "shell-quote": "^1.8.2",
     "string-width": "^7.1.0",
@@ -59,6 +61,7 @@
     "@types/command-exists": "^1.2.3",
     "@types/diff": "^7.0.2",
     "@types/dotenv": "^6.1.1",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.24",
     "@types/react": "^18.3.1",
     "@types/shell-quote": "^1.7.5",
