--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,7 @@
     "@types/diff": "^7.0.2",
     "@types/dotenv": "^6.1.1",
     "@types/micromatch": "^4.0.8",
+    "@types/mime-types": "^2.1.4",
     "@types/minimatch": "^5.1.2",
     "@types/ws": "^8.5.10",
     "typescript": "^5.3.3",
