--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,7 @@
     "command-exists": "^1.2.9",
     "diff": "^7.0.0",
     "dotenv": "^16.4.7",
+    "gaxios": "^6.1.1",
     "glob": "^10.4.1",
     "highlight.js": "^11.11.1",
     "i18next": "^25.2.1",
