HooksのStopフック実行タイミングを修正
- useIdleStopHookを改良し、Idle状態が1秒間継続した場合のみStopフックを実行するように変更
- CoreToolSchedulerから個別ツール完了時のStopフック実行を削除し、UIレイヤーに一元化
- ドキュメントを更新し、Stopフックの実行条件を明確化
- サンプルコマンドメッセージを改善

--- a/examples/hooks-example-settings.json
+++ b/examples/hooks-example-settings.json
@@ -37,7 +37,7 @@
         "hooks": [
           {
             "type": "command",
-            "command": "echo '[HOOK] Session ending - goodbye!' >&2"
+            "command": "echo '[HOOK] AI response completed - ready for next input!' >&2"
           }
         ]
       }
